--- a/signin.ui
+++ b/signin.ui
@@ -35,10 +35,10 @@
     </size>
    </property>
    <property name="styleSheet">
-    <string notr="true">border-width:0px;
-border-radius:33px;
-border-style:solid;
-border-color: rgb(255, 255, 255);</string>
+    <string notr="true">width: 200px;
+height: 200px;
+border-radius: 50%;
+border: 2px solid rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string/>
