--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,7 +49,7 @@
      <string notr="true">width: 200px;
 height: 200px;
 border-radius: 50%;
-border: 2px solid rgb(255, 255, 255,0);</string>
+border: 2px solid rgba(255, 255, 255,0);</string>
     </property>
     <property name="text">
      <string>icon</string>
@@ -149,7 +149,7 @@ font: 13pt &quot;黑体&quot;;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255,0);
+     <string notr="true">background-color: rgba(255, 255, 255,0);
 font: 16pt &quot;黑体&quot;;</string>
     </property>
     <property name="text">
@@ -166,7 +166,7 @@ font: 16pt &quot;黑体&quot;;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255,0);
+     <string notr="true">background-color: rgba(255, 255, 255,0);
 font: 12pt &quot;黑体&quot;;</string>
     </property>
     <property name="text">
