--- a/chat.ui
+++ b/chat.ui
@@ -59,7 +59,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>40</y>
+     <y>10</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -95,6 +95,22 @@
    </property>
    <property name="text">
     <string>发送</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="friendAcc1">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>50</y>
+     <width>100</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;黑体&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Acc</string>
    </property>
   </widget>
  </widget>
